--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,139 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* 
+NAVIGATION
+TOP CONTAINER
+CAIXA
+LIVROS
+FORM
+*/
+
+:root {
+  --primary: #ddd;
+  --dark: #333;
+  --light: #fff;
+  --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  color: var(--dark);
+}
+
+body {
+  background: #ccc;
+  margin: 30px 50px;
+  line-height: 1.4;
+}
+
+.container {
+  display: grid;
+  grid-gap: 20px;
+}
+
+/* NAVIGATION */
+
+.main-nav ul {
+  display: grid;
+  grid-gap: 40px;
+  padding: 0px;
+  margin: 0px;
+  list-style: none;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.main-nav a {
+  background: var(--primary);
+  display: block;
+  text-decoration: none;
+  padding: 0.8rem;
+  text-align: center;
+  color: var(--dark);
+  text-transform: uppercase;
+  font-size: 1.1rem;
+  box-shadow: var(--shadow);
+}
+
+.main-nav a:hover {
+  background: var(--dark);
+  color: var(--light);
+}
+
+/* TOP CONTAINER */
+
+.top-container {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+/* CAIXA */
+
+.caixa {
+  background: var(--primary);
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  box-shadow: var(--shadow);
+  padding: 1.5rem;
+  max-height: 600px;
+  overflow-y: auto;
+}
+
+.caixa-titulo {
+  font-size: 25px;
+  background: var(--dark);
+  color: var(--light);
+  text-align: center;
+}
+
+/* LIVROS */
+
+.livros ul {
+  padding: 0px;
+}
+
+.livros li {
+  list-style-type: none;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding: 5px;
+}
+
+.livros li:hover {
+  background: #ccc;
+}
+
+.livros h1 {
+  margin-top: 0px;
+}
+
+.livros h4 {
+  margin: 0px;
+}
+
+.livros p {
+  font-size: 0.8rem;
+  margin: 0px;
+  font-style: italic;
+}
+
+/* FORM - INSERIR LIVROS */
+
+.livro-input {
+  display: flex;
+  flex-grow: 1;
+  width: 300px;
+  font-size: 15px;
+  margin: 5px;
+  padding: 5px;
+}
+
+.btn {
+  background: var(--dark);
+  color: var(--light);
+  padding: 0.6rem 1.3rem;
+  text-decoration: none;
+  border: 0;
+  font-size: 1rem;
+  cursor: pointer;
 }
