change top-container to have 2 caixas

--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@ body {
 .top-container {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
 
 /* CAIXA */
@@ -136,4 +136,20 @@ body {
   border: 0;
   font-size: 1rem;
   cursor: pointer;
+}
+
+@media (max-width: 900px) {
+  .top-container {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 375px) {
+  .top-container {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
