--- a/src/index.css
+++ b/src/index.css
@@ -7,21 +7,21 @@ FORM
 */
 
 :root {
-  --primary: #ddd;
-  --dark: #333;
-  --light: #fff;
+  --light: #fbfbef;
+  --dark: #585858;
   --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
 }
 
 html {
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Gentium Book Basic", serif;
   color: var(--dark);
 }
 
 body {
-  background: #ccc;
-  margin: 30px 50px;
+  background: var(--light);
+  margin: 0 30px 0 30px;
+  padding-bottom: 30px;
   line-height: 1.4;
 }
 
@@ -42,7 +42,7 @@ body {
 }
 
 .main-nav a {
-  background: var(--primary);
+  background: var(--light);
   display: block;
   text-decoration: none;
   padding: 0.8rem;
@@ -63,44 +63,85 @@ body {
 .top-container {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 2fr;
 }
 
 /* CAIXA */
 
 .caixa {
-  background: var(--primary);
-  display: grid;
-  align-items: center;
-  justify-items: center;
-  box-shadow: var(--shadow);
-  padding: 1.5rem;
-  max-height: 600px;
-  overflow-y: auto;
+  background: var(--light);
+  border: solid 1px var(--dark);
+  margin: 0px;
 }
 
-.caixa-titulo {
-  font-size: 25px;
+.caixa-cabeca {
+  display: flex;
+  font-size: 1.2rem;
+  justify-content: left;
   background: var(--dark);
   color: var(--light);
-  text-align: center;
+  margin: 0px;
+  padding: 1rem;
+}
+
+.caixa-corpo {
+  padding: 1rem;
+  overflow-y: auto;
+  max-height: 400px;
+}
+
+.caixa .caixa-detalhe-livro {
+  display: grid;
+  grid-gap: 10px;
+  /* grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); */
+  grid-template-columns: 1fr 3fr;
+}
+
+.foto {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 10px;
+}
+
+.foto img {
+  border: solid 1px var(--dark);
+  width: 100%;
+}
+
+.caixa-detalhe-livro .descricao {
+  padding: 10px;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+}
+
+.caixa-detalhe-livro .titulo {
+  font-weight: bold;
+  /* font-size: 0.8rem; */
+  margin: 1px;
+}
+
+.caixa-detalhe-livro .texto {
+  /* font-size: 0.8rem; */
+  font-weight: italic;
+  margin: 1px;
+}
+
+.caixa-detalhe-livro .linha {
+  margin-bottom: 5px;
 }
 
 /* LIVROS */
 
 .livros ul {
   padding: 0px;
+  margin: 0px;
 }
 
 .livros li {
   list-style-type: none;
   margin-bottom: 10px;
-  margin-top: 10px;
-  padding: 5px;
-}
-
-.livros li:hover {
-  background: #ccc;
 }
 
 .livros h1 {
@@ -109,6 +150,11 @@ body {
 
 .livros h4 {
   margin: 0px;
+}
+
+.livros h4:hover {
+  text-decoration-line: underline;
+  cursor: pointer;
 }
 
 .livros p {
@@ -126,6 +172,7 @@ body {
   font-size: 15px;
   margin: 5px;
   padding: 5px;
+  font-family: "Gentium Book Basic", serif;
 }
 
 .btn {
@@ -136,6 +183,10 @@ body {
   border: 0;
   font-size: 1rem;
   cursor: pointer;
+  display: block;
+  width: 100%;
+  margin-top: 15px;
+  font-family: "Gentium Book Basic", serif;
 }
 
 @media (max-width: 900px) {
@@ -146,10 +197,19 @@ body {
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 700px) {
   .top-container {
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (max-width: 450px) {
+  .caixa-detalhe-livro {
+    display: grid;
+    grid-gap: 10px;
+    /* grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); */
+    grid-template-columns: 1fr;
   }
 }
