icones na caixa cabeca com link

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* 
+/*
 NAVIGATION
 TOP CONTAINER
 CAIXA
@@ -25,9 +25,9 @@ body {
   line-height: 1.4;
 }
 
-.container {
-  display: grid;
-  grid-gap: 20px;
+a {
+  text-decoration: none;
+  color: var(--light);
 }
 
 /* NAVIGATION */
@@ -76,12 +76,22 @@ body {
 
 .caixa-cabeca {
   display: flex;
-  font-size: 1.2rem;
-  justify-content: left;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
   background: var(--dark);
   color: var(--light);
   margin: 0px;
-  padding: 1rem;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+}
+
+.caixa-cabeca h3 {
+  margin: 0px;
+}
+
+.caixa-cabeca-icones i {
+  padding-left: 15px;
+  font-size: 1.2rem;
 }
 
 .caixa-corpo {
