--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,12 @@ FORM
   --light: #fbfbef;
   --dark: #585858;
   --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+  --font: "Gentium Book Basic", serif;
 }
 
 html {
   box-sizing: border-box;
-  font-family: "Gentium Book Basic", serif;
+  font-family: var(--font);
   color: var(--dark);
 }
 
@@ -28,6 +29,11 @@ body {
 a {
   text-decoration: none;
   color: var(--light);
+}
+
+input {
+  background: var(--light);
+  font-family: ;
 }
 
 /* NAVIGATION */
@@ -89,7 +95,7 @@ a {
   margin: 0px;
 }
 
-.caixa-cabeca-icones i {
+.caixa-cabeca-itens i {
   padding-left: 15px;
   font-size: 1.2rem;
 }
@@ -182,7 +188,7 @@ a {
   font-size: 15px;
   margin: 5px;
   padding: 5px;
-  font-family: "Gentium Book Basic", serif;
+  font-family: var(--font);
 }
 
 .btn {
@@ -196,7 +202,7 @@ a {
   display: block;
   width: 100%;
   margin-top: 15px;
-  font-family: "Gentium Book Basic", serif;
+  font-family: var(--font);
 }
 
 @media (max-width: 900px) {
